# hyprsync

./: .gitignore  CMakeLists.txt  PKGBUILD  README.md  install.sh
.github/workflows/: dev-release.yml  release.yml
completions/: hyprsync.bash  hyprsync.zsh
config/: hyprsync.toml.example
include/hyprsync/: version.h.in  version.hpp.in
src/: cli.c  cli.cpp  cli.h  cli.hpp  config.c  config.cpp  config.h  config.hpp  daemon.c  daemon.cpp  daemon.h  daemon.hpp  git.c  git.cpp  git.h  git.hpp  log.c  log.h  main.c  main.cpp  setup.c  setup.cpp  setup.h  setup.hpp  sync.c  sync.cpp  sync.h  sync.hpp  tui.c  tui.cpp  tui.h  tui.hpp  upgrade.c  upgrade.cpp  upgrade.h  upgrade.hpp  util.c  util.cpp  util.h  util.hpp  (+5 more)
systemd/: hyprsync.service
tests/: CMakeLists.txt  test.h  test_cli.c  test_cli.cpp  test_config.c  test_config.cpp  test_git.c  test_git.cpp  test_util.c  test_util.cpp
